--- a/css/navBar.css
+++ b/css/navBar.css
@@ -1,28 +1,29 @@
-header.navBar{
+div.navBar{
     background-color: #05acec;
     color: white;
     border-bottom-style: solid;
     border-width: thin;
     border-color: darkgrey ;
 }
-header.navBar div.navBarLogo{
+div.navBar div.navBarLogo{
     display: inline-block;
     font-size: 30px;
     padding: 10px;
 }
-header.navBar ul{
+div.navBar ul{
     font-size: 20px;
 }
-header.navBar ul.rightMenu{
+div.navBar ul.rightMenu{
     float: right;
 }
-header.navBar ul li{
+div.navBar ul li{
     display: inline-block;
     padding: 20px 10px;
 }
-header.navBar ul li:hover{
+div.navBar ul li.menu:hover{
     background-color: #0c4464;
 }
-header.navBar ul li a{
+div.navBar ul li a{
+    text-decoration: none;
     color: white;
 }
